--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "blurhash": "1.1.3",
+    "react": "^17.0.1",
+    "react-blurhash": "0.1.3",
+    "react-dom": "^17.0.1",
+    "react-multi-carousel": "2.6.1"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -10,21 +17,15 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "blurhash": "1.1.3",
     "canvas": "2.6.1",
     "node-sass": "4.14.1",
-    "react": "^17.0.1",
-    "react-blurhash": "0.1.3",
-    "react-dom": "^17.0.1",
-    "react-multi-carousel": "2.6.1",
     "react-scripts": "4.0.1",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "CI=true react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
